src-tauri/src/bin/ifai/snapshots/ifai__tui__tests__status_streaming.snap
---
source: src/bin/ifai/tui.rs
expression: text
---
AI 正 在 处 理 请 求 ...                                                              
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 Streaming (zhipu)                                                              
────────────────────────────────────────────────────────────────────────────────
⟩
