src-tauri/src/bin/ifai/snapshots/ifai__tui__tests__status_tool_running.snap
---
source: src/bin/ifai/tui.rs
expression: text
---
AI 正 在 处 理 请 求 ...                                                              
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 Tool: read_file [running]                                                      
────────────────────────────────────────────────────────────────────────────────
⟩
