src-tauri/src/bin/ifai/snapshots/ifai__tui__tests__streaming_frozen_input.snap
---
source: src/bin/ifai/tui.rs
expression: text
---
User: hello                                                                     
AI: 我 来 帮 你 分 析 这 段 代 码 ...                                                     
首 先 看 一 下 文 件 结 构 。                                                             
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 Streaming (zhipu)                                                              
────────────────────────────────────────────────────────────────────────────────
⟩ hello
