src-tauri/src/bin/ifai/snapshots/ifai__tui__tests__streaming_with_input.snap
---
source: src/bin/ifai/tui.rs
expression: text
---
你 好 ！ 有 什 么 可 以 帮 助 你 的 ？                                                       
我 可 以 帮 你 分 析 代 码 、 编 写 测 试 等 。                                                 
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 Streaming (zhipu)                                                              
────────────────────────────────────────────────────────────────────────────────
⟩ hello
