src-tauri/src/bin/ifai/snapshots/ifai__tui__tests__streaming_with_queue.snap
---
source: src/bin/ifai/tui.rs
expression: text
---
AI 正 在 回 复 第 一 条 消 息 ...                                                        
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 Streaming (zhipu) · Queue: 2                                                   
────────────────────────────────────────────────────────────────────────────────
⟩ next
