src-tauri/src/bin/ifai/snapshots/ifai__tui__tests__t16_bold_rendering.snap
---
source: src/bin/ifai/tui.rs
expression: text
---
bold text plain                                                                 
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
○ [Ready]                                                                       
────────────────────────────────────────────────────────────────────────────────
⟩
