src-tauri/src/bin/ifai/snapshots/ifai__tui__tests__t17_heading_rendering.snap
---
source: src/bin/ifai/tui.rs
expression: text
---
Main Title                                                                      
Section                                                                         
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
○ [Ready]                                                                       
────────────────────────────────────────────────────────────────────────────────
⟩
