src-tauri/src/bin/ifai/snapshots/ifai__tui__tests__t18_mixed_format.snap
---
source: src/bin/ifai/tui.rs
expression: text
---
Use bold and code here                                                          
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
○ [Ready]                                                                       
────────────────────────────────────────────────────────────────────────────────
⟩
